# pm-nexus

./: .gitignore
backend/: pyproject.toml  seed_backlog.py  seed_data.py  seed_sprints.py
backend/app/: config.py  main.py
backend/app/models/: dependency.py  document.py  engineer.py  epic.py  project.py  setting.py  sprint_rollover.py  ticket.py
backend/app/routers/: dependencies.py  documents.py  engineers.py  epics.py  forecast.py  projects.py  settings.py  sprint_planning.py  sync.py  tickets.py
backend/app/schemas/: dependency.py  document.py  engineer.py  epic.py  forecast.py  project.py  setting.py  sprint_planning.py  sync.py  ticket.py
backend/app/services/: forecast.py  jira_client.py  jira_helpers.py  sync_service.py
frontend/: .env.example  README.md  index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: dependencies.ts  documents.ts  engineers.ts  epics.ts  forecast.ts  projects.ts  settings.ts  sprintPlanning.ts  sync.ts  tickets.ts
frontend/src/components/: ForecastCard.tsx  KanbanBoard.tsx  PasswordGate.tsx  ProgressBar.tsx  Sidebar.tsx  SyncButton.tsx  TicketTable.tsx
frontend/src/hooks/: useDependencies.ts  useEngineers.ts  useEpics.ts  useProjects.ts  useSprintPlanning.ts  useSync.ts
frontend/src/pages/: DashboardPage.tsx  EngineerDetailPage.tsx  EngineersPage.tsx  ProjectDetailPage.tsx  RoadmapPage.tsx  SettingsPage.tsx  SprintPlanningPage.tsx  TicketsPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: timezones.ts
